@startuml

title __TASK_1's Class Diagram__\n

  namespace task_1 {
    abstract class task_1.AbstractCar {
        + gearBox : String
        + horsePower : int
        + maxSpeed : int
        + model : String
        + wheelDrive : String
        {abstract} ~ setGearBox()
        {abstract} ~ setHorsePower()
        {abstract} ~ setMaxSpeed()
        {abstract} ~ setModel()
        {abstract} ~ setWheelDrive()
    }
  }
  

  namespace task_1 {
    class task_1.Car {
        + setGearBox()
        + setHorsePower()
        + setMaxSpeed()
        + setModel()
        + setWheelDrive()
        + toString()
    }
  }
  

  namespace task_1 {
    class task_1.CarBuilder {
        - gearBox : String
        - horsePower : int
        - maxSpeed : int
        - model : String
        - wheelDrive : String
        + buildExclusiveCar()
        + buildSerialCar()
        + buildTruckCar()
        ~ setGearBox()
        ~ setHorsePower()
        ~ setMaxSpeed()
        ~ setModel()
        ~ setWheelDrive()
    }
  }
  

  namespace task_1 {
    class task_1.ExclusiveCar {
        + setGearBox()
        + setHorsePower()
        + setMaxSpeed()
        + setModel()
        + setWheelDrive()
        + toString()
    }
  }
  

  namespace task_1 {
    class task_1.Main {
        {static} + main()
    }
  }
  

  namespace task_1 {
    class task_1.Truck {
        + toString()
        ~ setGearBox()
        ~ setHorsePower()
        ~ setMaxSpeed()
        ~ setModel()
        ~ setWheelDrive()
    }
  }
  

  task_1.Car -up-|> task_1.AbstractCar
  task_1.ExclusiveCar -up-|> task_1.AbstractCar
  task_1.Truck -up-|> task_1.AbstractCar


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
